# DovnarAlexander.github.io

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  build_cv.py  generate.py  index.html  index.html.j2  post.html.j2  pyproject.toml
.github/workflows/: deploy.yml  release.yaml
blog/kubernetes-probes-mental-model/: index.html
content/: about_me.md  education.md  experience.md  highlights.md  skills.md  what_i_do.md
content/blog/: ai-code-security-trust-boundary.md  kubernetes-probes-mental-model.md
css/: input.css  tailwind.css  terminal-theme.css
cv/: Dockerfile  cv.css  template.html.j2
cv/content/: en.md  ru.md
